# segmentation

./: .gitignore  CMakeLists.txt  experimento.cxx  extraerImagen.cxx  extraerImagenSerial.cxx  filtroExtraccion.cxx  filtroExtraccionSerial.cxx
